Updated code of conduct contrast colour

--- a/templates/base.html
+++ b/templates/base.html
@@ -247,7 +247,7 @@
           </div>
           <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
             <p>
-              <a class='text-decoration-none h4' href="{% url 'code_of_conduct' %}">Code of Conduct</a>
+              <a class='text-decoration-none text-green h4' href="{% url 'code_of_conduct' %}">Code of Conduct</a>
             </p>
 
             © 2023 Copyright: CoolCoders - For educational purposes
