#54 env.py bug issue added to readme

--- a/templates/category.html
+++ b/templates/category.html
@@ -17,7 +17,7 @@
   <h2 class="mt-2 text-light border-bottom">
     <em>{{category.description}}</em>
   </h2>
-    <div class="row p-3">
+    <div class="row">
       {% for post in posts %}
       <div class="col-md-4 g-3 mt-3 mb-3 d-flex">
           <!-- Render Preview Post Cards -->
