--- a/templates/profile.html
+++ b/templates/profile.html
@@ -142,10 +142,11 @@
 
 <!-- User Posts Section -->
 <section id="user-posts" class="text-center">
-  <div class="row p-3">
-    <h2 class='text-green fw-bolder display-6'>
-      <strong class='text-uppercase text-green'> {{profile.username}}'s Posts</strong>
-    </h2>
+  <h2 class='text-green fw-bolder display-6 mt-3 mb-0'>
+    <strong class='text-uppercase text-green'> {{profile.username}}'s Posts</strong>
+  </h2>
+  <div class="row p-2">
+  
 
     {% if posts_page|length == 0 %}
     <div class='text-center text-white'>
@@ -167,7 +168,7 @@
     {% endif %}
 
       {% for post in posts_page %}
-          <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3 d-flex">
+          <div class="col-lg-3 col-md-6 g-1 mb-3 d-flex">
               {% include "includes/post-preview.html" %}
           </div>
       {% endfor %}
@@ -216,10 +217,10 @@
 <!-- User Favourites Section -->
 
 <section id="favourites" class="text-center">
-  <div class="row p-3">
-    <h2 class='text-green fw-bolder display-6'>
-      <strong class='text-uppercase text-green'> {{profile.username}}'s Favourites</strong>
-    </h2>
+  <h2 class='text-green fw-bolder display-6 mt-3 mb-0'>
+    <strong class='text-uppercase text-green'> {{profile.username}}'s Favourites</strong>
+  </h2>
+  <div class="row p-2">
 
    
     {% if favourites_page|length == 0 %}
@@ -242,7 +243,7 @@
     {% endif %}
 
       {% for post in favourites_page %}
-          <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3 d-flex">
+          <div class="col-lg-3 col-md-6 g-1 mb-3 d-flex">
               {% include "includes/post-preview.html" %}
           </div>
       {% endfor %}
